--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -35,6 +35,9 @@ jobs:
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
       
+    - name: Pls, see me
+      run: g++ -Ifrobnicate lib/number.h
+      
     - name: Upakovka
       run: g++ bin/main.cpp -o main
 
